<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:icon="@drawable/unchecked"
        android:checkable="true"
        android:orderInCategory="0"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
