<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ListPreference-->
        <!--android:title="@string/pref_type_label"-->
        <!--android:key="@string/pref_type_key"-->
        <!--android:defaultValue="@string/pref_type_movies_value"-->
        <!--android:entries="@array/pref_type_entries"-->
        <!--android:entryValues="@array/pref_type_values" />-->

    <ListPreference
        android:title="@string/pref_sort_by_label"
        android:key="@string/pref_sort_by_key"
        android:entries="@array/pref_sort_by_entries"
        android:defaultValue="@string/pref_sort_by_popularity_value"
        android:entryValues="@array/pref_sort_by_values" />

</PreferenceScreen>